change class on the button for other program, fix readme spacing

--- a/themes/best-bc/sass/_front-page.scss
+++ b/themes/best-bc/sass/_front-page.scss
@@ -185,7 +185,7 @@ a {
   text-align: center;
   margin-bottom: 6vw;
 
-  .button {
+  .other-programs-button {
     background: $color__button-light;
     border-radius: 20px;
     padding: 10px;
