--- a/themes/best-bc/style.css
+++ b/themes/best-bc/style.css
@@ -1174,7 +1174,7 @@ a {
 .learn-more {
   text-align: center;
   margin-bottom: 6vw; }
-  .learn-more .button {
+  .learn-more .other-programs-button {
     background: #e3a72f;
     border-radius: 20px;
     padding: 10px;
